demo chart init

--- a/lab/report/index.html
+++ b/lab/report/index.html
@@ -29,7 +29,7 @@
 <my-app>Loading...</my-app>
 <router-outlet></router-outlet>
 
-<my-plot></my-plot>
+<app-area-chart></app-area-chart>
 ------------BBBBBBBBBB---------------
 </body>
 </html>
