--- a/lab/report/index.html
+++ b/lab/report/index.html
@@ -4,7 +4,7 @@
     <title>Reporting System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" href="styles.css">-->
     <!-- 1. Load libraries -->
     <!-- Polyfill for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -27,9 +27,7 @@
 <!-- 3. Display the application -->
 <body>
 <my-app>Loading...</my-app>
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 
-<app-area-chart></app-area-chart>
-------------BBBBBBBBBB---------------
 </body>
 </html>
