almost workable d3 chart with angular 2

--- a/lab/report/index.html
+++ b/lab/report/index.html
@@ -26,8 +26,13 @@
 </head>
 <!-- 3. Display the application -->
 <body>
+<div id="polyline">
+<svg></svg>
+</div>
 <my-app>Loading...</my-app>
-<!--<router-outlet></router-outlet>-->
 
+
+<!---->
+<!--<router-outlet></router-outlet>-->
 </body>
 </html>
