--- a/ycweb/src/main/webapp/report/dual_polyline_02.html
+++ b/ycweb/src/main/webapp/report/dual_polyline_02.html
@@ -94,7 +94,7 @@ var svg = d3.select("body").append("svg")
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.json("/ycweb-1.0/ckp/all", function(error, data) {
+d3.json("/ycweb-1.0/ckp/allbyyear?year=2017", function(error, data) {
   if (error) throw error;
 
   data = data.dclist;
